--- a/src/tree/tree.html
+++ b/src/tree/tree.html
@@ -3,12 +3,14 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <head>
     <title>Tab Master</title>
-<!--    <link rel="stylesheet" href="/lib/fancytree/skin-xp/ui.fancytree.css">-->
+    <!--    <link rel="stylesheet" href="/lib/fancytree/skin-xp/ui.fancytree.css">-->
     <!-- <link rel="stylesheet" type="text/css" href="./zen-tab.css" /> -->
-<!--    <script src="/lib/jquery-3.6.0.js"></script>-->
-<!--    <script src="/lib/fancytree/jquery.fancytree-all-deps.js"></script>-->
+    <!--    <script src="/lib/jquery-3.6.0.js"></script>-->
+    <!--    <script src="/lib/fancytree/jquery.fancytree-all-deps.js"></script>-->
 </head>
 <body>
-<div id="tree"></div>
+    <div id="header"></div>
+    <div id="tree"></div>
+    <div id="footer"></div>
 </body>
 </html>
