--- a/src/tree/tree.html
+++ b/src/tree/tree.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" theme="dark-mode">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <head>
     <title>Tab Master</title>
