--- a/src/tree/tree.html
+++ b/src/tree/tree.html
@@ -2,7 +2,7 @@
 <html lang="en" theme="dark-mode">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <head>
-    <title>Tab Master</title>
+    <title>Tab Sidebar</title>
 </head>
 <body>
     <div id="root"></div>
