[icon] add logo resources

--- a/public/popup.html
+++ b/public/popup.html
@@ -6,7 +6,10 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <meta name="referrer" content="no-referrer" />
         <base target="_blank" />
-        <title><%= htmlWebpackPlugin.options.title %></title>
+<!--        <title><%= htmlWebpackPlugin.options.title %></title>-->
+        <title>Link Map</title>
+        <link rel="shortcut icon" type="image/svg+xml" href="/icons/favicon.svg">
+        <link rel="alternate icon" href="/icons/favicon.ico">
     </head>
     <body>
         <div id="root"></div>
