--- a/public/options.html
+++ b/public/options.html
@@ -5,7 +5,9 @@
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <base target="_blank" />
-        <title><%= htmlWebpackPlugin.options.title %></title>
+        <title>Link Map</title>
+        <link rel="shortcut icon" type="image/svg+xml" href="/icons/favicon.svg">
+        <link rel="alternate icon" href="/icons/favicon.ico">
     </head>
     <body>
         <div id="root"></div>
