--- a/src/tree/tree.html
+++ b/src/tree/tree.html
@@ -2,7 +2,9 @@
 <html lang="en" theme="dark-mode">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <head>
-    <title>Tab Sidebar</title>
+    <title>Link Map</title>
+    <link rel="shortcut icon" type="image/svg+xml" href="/icons/favicon.svg">
+    <link rel="alternate icon" href="/icons/favicon.ico">
 </head>
 <body>
     <div id="root"></div>
